# InsightRAG

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: bootstrap-wiki.yml  ci.yml
app/: main.py
docs/: DEPLOY.md  architecture.md
eval_harness/: RESULTS.md  RESULTS_real_models.md  __init__.py  gate.py  harness.py  metrics.py
eval_harness/data/: corpus.json  injection.json
guardrails/: __init__.py  injection.py  pii.py
rag/: __init__.py  chunking.py  cli.py  config.py  generate.py  ingest.py  pipeline.py  rerank.py  retrieve.py  store.py  text_utils.py  types.py
rag/providers/: __init__.py  embeddings.py  llm.py  rerank.py
tests/: conftest.py  test_api.py  test_chunking.py  test_eval_harness.py  test_generation.py  test_guardrails.py  test_pipeline.py  test_retrieval.py
ui/: streamlit_app.py
