[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insightrag"
version = "0.1.0"
description = "Production-grade agentic RAG over your own documents: hybrid retrieval, reranking, citations, evals, and guardrails. Free/offline-first."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rana Faraz" }]
keywords = ["rag", "retrieval-augmented-generation", "llm", "vector-search", "reranking", "fastapi"]

# Core deps are kept light so `pip install -e .` works for the offline/stub stack
# (deterministic backends used by tests & CI). Heavy ML backends live in extras.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "pypdf>=4.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Local, free embedding + rerank + generation backends
local = [
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
]
# Optional hosted provider
openai = ["openai>=1.30"]
# Demo UI
ui = ["streamlit>=1.34"]
# RAGAS-style eval with LLM judges (optional; custom metrics work without it)
eval = ["ragas>=0.1.9", "datasets>=2.19"]
# Dev / CI
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
insightrag = "rag.cli:main"

[project.urls]
Homepage = "https://github.com/ranafaraz/InsightRAG"
Repository = "https://github.com/ranafaraz/InsightRAG"

[tool.setuptools.packages.find]
include = ["rag*", "app*", "guardrails*", "eval_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: line length handled by formatter; B905: explicit zip strict= not required here;
# B008: FastAPI's File()/Depends() default-argument idiom is intentional.
ignore = ["E501", "B905", "B008"]
